balance draw according to specified columns

--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -433,7 +433,8 @@ list(
     steekproef,
     draw_sample(sampling_frame = steekproefkader_per_stratum,
                 sample_size = allocatie_per_stratum$samplesize,
-                sample_size_multiplication = 1),
+                sample_size_multiplication = 1,
+                balance = c("X", "Y", "area_prop_sb")),
     pattern = map(steekproefkader_per_stratum, allocatie_per_stratum)
   )
 )
